basic HTML template added to project

--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="styles.css">
+	<body>
+	<!-- Notice how everything is enclosed within the opening and
+		 closing html tags -->
+		<h1>My name is Kenneth P. Chang</h1>
+		<p>I like pizza!</p>
 
-
-<body>
-  <p>
-    <b>
-      Classroom Charter for Teacher Robbie's Class
-    </b>
-    <!-- line break below -->
-  </p>
-
-</body>
-	<div class="background">
-	<img src="Willy.png" class="willy">
-	</div>
+	</body>
 </html>
