--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
+<!-- Responsive Web Design -->
+<!-- https://www.w3schools.com/css/css_rwd_viewport.asp -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Linking external CSS file to  -->
+<!-- https://www.w3schools.com/html/html_css.asp -->
+<link rel="stylesheet" href="styles/style.css">
+
+
 	<body>
+		<div class="container">
+
+			<div class="background_image">
+				<div class="title_on_chalkboard">
+					<h1>Classroom Charter</h1>
+				</div>
+			
+			<div class="willy">
+				<img src="images/willy2.png">
+			</div> <!-- end div willy -->
+
+			</div> <!-- end background_image div -->
+
 	<!-- Notice how everything is enclosed within the opening and
 		 closing html tags -->
-		<h1>My name is Kenneth P. Chang</h1>
-		<p>I like pizza!</p>
-
+<!-- 		<div class="title_on_chalkboard">
+			<h1>Classroom Charter</h1>
+		</div> -->
+		<!-- <p>I like pizza!</p> -->
+		</div> <!-- end container -->
 	</body>
 </html>
