cody added to background image

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 				<div class="title_on_chalkboard">
 					<h1>Classroom Charter</h1>
 				</div>
-			
-			<div class="willy">
-				<img src="images/willy2.png">
-			</div> <!-- end div willy -->
+				<div class="student_images"> <!-- begin willy div -->
+					<img src="images/willy2.png" class="willy">
+					<img src="images/robbiedoyen2.png" class="cody">
+				</div> <!-- end div willy -->
+
 
 			</div> <!-- end background_image div -->
 
